# trtis-cidmgr

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  codes.in  config.pbtxt.in
src/backend/: CMakeLists.txt  cidmgr.cc
src/clients/: CMakeLists.txt
src/clients/c++/: CMakeLists.txt  cidmgr_client.cc  cidmgr_client.h  cidmgr_sequence_client.cc
src/clients/python/: CMakeLists.txt  setup.py  version.py.in
src/clients/python/trtis_cidmgr/: __init__.py  client.py  context.py  model.py  util.py
test/: doug_sequence_client.py  runmany.py  simple_sequence_config.pbtxt.in
